--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,37 +57,5 @@ jobs:
           sudo cpack -G RPM
 
       - name: Create Release
-        id: create_release
-        #if: startsWith(github.ref, 'refs/tags/')
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.version }}
-          release_name: Release ${{ env.version }}
-          draft: false
-          prerelease: false
-          
-      - name: Upload debian package
-        id: upload-release-asset 
-        #if: startsWith(github.ref, 'refs/tags/')
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build-cmake/gitklient.deb
-          asset_name: gitklient_${{env.version}}_amd64.deb
-          asset_content_type: application/vnd.debian.binary-package
-
-      - name: Upload rpm package
-        id: upload-release-asset 
-        #if: startsWith(github.ref, 'refs/tags/')
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build-cmake/gitklient.rpm
-          asset_name: gitklient-${{env.version}}-Linux.rpm
-          asset_content_type: application/x-rpm
+        run: |
+          hub release create -a ./build-cmake/gitklient.deb#gitklient_${{env.version}}_amd64.deb -a ./build-cmake/gitklient.rpm#gitklient-${{env.version}}-Linux.rpm -m v${{ env.version }} v${{ env.version }}
