--- a/src/git/CMakeLists.txt
+++ b/src/git/CMakeLists.txt
@@ -35,6 +35,7 @@ set(
     ${CMAKE_CURRENT_LIST_DIR}/commands/commandpush.cpp
     ${CMAKE_CURRENT_LIST_DIR}/commands/commandswitchbranch.cpp
     ${CMAKE_CURRENT_LIST_DIR}/commands/commandmerge.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/commands/addsubmodulecommand.cpp
 )
 
 #include(${CMAKE_CURRENT_LIST_DIR}/models/CMakeLists.txt)
