--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,7 @@ jobs:
         platform: [ubuntu-20.04]
  
     runs-on: ${{ matrix.platform }}
-    name: ${{ matrix.platform }} - Qt ${{ matrix.qt_version }}
-      
-    env:
-      CMAKE_PREFIX_PATH: $Qt6_DIR/lib/cmake
+    name: ${{ matrix.platform }}
         
     steps:
       - name: Clone repo
@@ -55,6 +52,7 @@ jobs:
           sudo cpack -G RPM
   
       - name: Create Release
-        if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
-          hub release create -a ./build-cmake/gitklient.deb#gitklient_${{env.version}}_amd64.deb -a ./build-cmake/gitklient.rpm#gitklient-${{env.version}}-Linux.rpm -m v${{ env.version }} v${{ env.version }}
+          tag_name="${GITHUB_REF##*/}"
+          hub release create -a ./build-cmake/gitklient.deb#gitklient_${{env.version}}_amd64.deb -a ./build-cmake/gitklient.rpm#gitklient-${{env.version}}-Linux.rpm -m "$tag_name" "$tag_name"
