--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,10 @@ jobs:
   
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag_name="${GITHUB_REF##*/}"
-          hub release create -a ./build-cmake/gitklient.deb#gitklient_${tag_name}_amd64.deb -a ./build-cmake/gitklient.rpm#gitklient-${tag_name}-Linux.rpm -m "$tag_name" "$tag_name"
+          gh release create $tag_name --generate-notes
+          gh release upload $tag_name ./build-cmake/gitklient.deb#gitklient_${tag_name}_amd64.deb
+          gh release upload $tag_name ./build-cmake/gitklient.rpm#gitklient-${tag_name}-Linux.rpm
