--- a/autotests/diff/CMakeLists.txt
+++ b/autotests/diff/CMakeLists.txt
@@ -8,7 +8,7 @@ ecm_add_test(
     LINK_LIBRARIES KF5::CoreAddons Qt5::Test Qt5::Core KF5::I18n
 )
 
-configure_file(sqlmodel_REMOTE_32623.h sqlmodel_REMOTE_32623.h COPYONLY)
-configure_file(sqlmodel_LOCAL_32623.h sqlmodel_LOCAL_32623.h COPYONLY)
-configure_file(sqlmodel_BASE_32623.h sqlmodel_BASE_32623.h COPYONLY)
-configure_file(sqlmodel_BACKUP_32623.h sqlmodel_BACKUP_32623.h COPYONLY)
+#configure_file(sqlmodel_REMOTE_32623.h sqlmodel_REMOTE_32623.h COPYONLY)
+#configure_file(sqlmodel_LOCAL_32623.h sqlmodel_LOCAL_32623.h COPYONLY)
+#configure_file(sqlmodel_BASE_32623.h sqlmodel_BASE_32623.h COPYONLY)
+#configure_file(sqlmodel_BACKUP_32623.h sqlmodel_BACKUP_32623.h COPYONLY)
