--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -5,31 +5,21 @@ set(GIT_KLIENT_ICONS
   48-apps-gitklient.png
   sc-apps-gitklient.svgz
 
-  32-actions-diff-keep-their.png
-  48-actions-diff-keep-their.png
-  sc-actions-diff-keep-their.svgz
-
-  32-actions-diff-keep-mine.png
-  48-actions-diff-keep-mine.png
-  sc-actions-diff-keep-mine.svgz
+  sc-actions-diff-keep-their.svg
+  sc-actions-diff-keep-mine.svg
 
   sc-actions-diff-keep-mine-before-their.svg
   sc-actions-diff-keep-their-before-mine.svg
   sc-actions-diff-keep-their-file.svg
   sc-actions-diff-keep-mine-file.svg
 
-  48-actions-git-status-added.png
-  32-actions-git-status-added.png
   sc-actions-git-status-added.svg
-  sc-actions-git-status-added.svgz
-  sc-actions-git-status-ignored.svgz
+  sc-actions-git-status-ignored.svg
   sc-actions-git-status-modified.svg
-  sc-actions-git-status-modified.svgz
   sc-actions-git-status-removed.svg
-  sc-actions-git-status-removed.svgz
-  sc-actions-git-status-unknown.svgz
-  sc-actions-git-status-update.svgz
-  sc-actions-git-status-renamed.svgz
+  sc-actions-git-status-unknown.svg
+  sc-actions-git-status-update.svg
+  sc-actions-git-status-renamed.svg
 
   sc-actions-diff-goto-next-diff.svg
   sc-actions-diff-goto-prev-diff.svg
