Add: git note support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,6 +92,7 @@ ki18n_wrap_ui(
     dialogs/fetchdialog.ui
     dialogs/switchbranchdialog.ui
     dialogs/initdialog.ui
+    dialogs/notedialog.ui
 )
 
 include(git/CMakeLists.txt)
